cmake_minimum_required(VERSION 3.15)

project(font2mtsdf VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 26)

set(SANITIZERS undefined address)

set(CPP_FILES
	decode.cpp

	exit_cause.cpp
	io.cpp
	main.cpp
	parser_instance.cpp
)
list(TRANSFORM CPP_FILES PREPEND src/${PROJECT_NAME}/)

set(SHADER_INPUT_FILES

)
list(TRANSFORM SHADER_INPUT_FILES PREPEND shaders/)
list(TRANSFORM SHADER_INPUT_FILES REPLACE "\.[^.]*$" ".hpp" OUTPUT_VARIABLE SHADER_OUTPUT_FILES)
list(TRANSFORM SHADER_OUTPUT_FILES PREPEND ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/)
list(REMOVE_DUPLICATES SHADER_OUTPUT_FILES)

add_executable(${PROJECT_NAME} ${CPP_FILES})
add_custom_target(${PROJECT_NAME}_shaders ALL DEPENDS ${SHADER_OUTPUT_FILES} SOURCES ${SHADER_INPUT_FILES})
add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_shaders)


#target_compile_options(${PROJECT_NAME} PUBLIC "-march=native")
target_compile_options(${PROJECT_NAME} PUBLIC "-fno-rtti" "-Wall" "-Wextra" "$<$<CONFIG:RELEASE>:-Werror>")
target_compile_options(${PROJECT_NAME} PUBLIC "$<$<CONFIG:RELEASE>:-Werror>" "$<$<CONFIG:RELEASE>:-O3>" "$<$<CONFIG:RELEASE>:-ffast-math>" "$<$<CONFIG:RELEASE>:-march=native>")
target_compile_options(${PROJECT_NAME} PUBLIC "$<$<CONFIG:DEBUG>:-O0>" "$<$<CONFIG:DEBUG>:-g>")

target_compile_options(${PROJECT_NAME} PUBLIC "-fopenmp")
target_link_options(${PROJECT_NAME} PUBLIC "-fopenmp")

if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang") # clang only
    target_compile_options(${PROJECT_NAME} PUBLIC "-fsized-deallocation")
    # Don't show warnings for C++20 designated field initializers.
    target_compile_options(${PROJECT_NAME} PUBLIC "-Wno-missing-designated-field-initializers")
else() # gcc only
    # gcc has no "missing-designated-field-initializers" (https://gcc.gnu.org/bugzilla/show_bug.cgi?id=96868)
    target_compile_options(${PROJECT_NAME} PUBLIC "-Wno-missing-field-initializers")
endif()


#target_link_options(${PROJECT_NAME} PUBLIC "-fuse-ld=mold")
#target_link_options(${PROJECT_NAME} PUBLIC "-v")

#target_link_directories(${PROJECT_NAME} PUBLIC "/usr/local/lib" "/usr/lib")
target_link_libraries(${PROJECT_NAME} PUBLIC sirius)
target_link_libraries(${PROJECT_NAME} PUBLIC glfw)
target_link_libraries(${PROJECT_NAME} PUBLIC vulkan)
target_link_libraries(${PROJECT_NAME} PUBLIC llfio)
target_link_libraries(${PROJECT_NAME} PUBLIC msdfgen-core)
target_link_libraries(${PROJECT_NAME} PUBLIC msdfgen-ext)
target_link_libraries(${PROJECT_NAME} PUBLIC harfbuzz)
target_link_libraries(${PROJECT_NAME} PUBLIC ktx)

foreach(SAN IN LISTS SANITIZERS)
    target_compile_options(${PROJECT_NAME} PUBLIC "$<$<CONFIG:DEBUG>:-fsanitize=${SAN}>")
    target_link_options(${PROJECT_NAME} PUBLIC "$<$<CONFIG:DEBUG>:-fsanitize=${SAN}>")
endforeach()


if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    target_compile_options(${PROJECT_NAME} PUBLIC "-fsized-deallocation")
endif()



### include directory ###
cmake_path(SET SELF_INC_CMAKE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
file(TO_NATIVE_PATH "${SELF_INC_CMAKE_DIR}" SELF_INC_DIR)
target_include_directories(${PROJECT_NAME} BEFORE PUBLIC "${SELF_INC_DIR}")


### clang compile commands ###
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)


### shader compiliation ###
file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/shaders)

foreach(shader ${SHADER_INPUT_FILES})
    set(shader_in ${PROJECT_SOURCE_DIR}/${shader})
    set(spv_out ${shader}.spv)
    set(dep_file ${shader}.d)

    get_filename_component(SHADER_NAME ${shader} NAME_WE)
    list(APPEND SHADER_INPUT_FILES_${SHADER_NAME} ${PROJECT_BINARY_DIR}/${shader})
    
    add_custom_command(
        OUTPUT ${spv_out}
        MAIN_DEPENDENCY ${shader_in}
        DEPFILE ${dep_file}
        COMMENT "Compiling SPIRV shader file ${PROJECT_BINARY_DIR}/${spv_out}"
        COMMAND
            glslc ${shader_in}
            -MD -MF ${dep_file}
            -o ${spv_out}
    )
endforeach()

foreach(OUTPUT_HPP ${SHADER_OUTPUT_FILES})
    get_filename_component(SHADER_NAME ${OUTPUT_HPP} NAME_WE)
    string(REPLACE ";" "$<SEMICOLON>" COMPILED_SHADER_INPUTS "${SHADER_INPUT_FILES_${SHADER_NAME}}")
    list(TRANSFORM SHADER_INPUT_FILES_${SHADER_NAME} APPEND .spv OUTPUT_VARIABLE COMPILED_SHADER_FILES)
    string(REPLACE ";" "$<SEMICOLON>" COMPILED_SHADER_FILES "${COMPILED_SHADER_FILES}")

    add_custom_command(
        OUTPUT ${OUTPUT_HPP}
        DEPENDS ${COMPILED_SHADER_FILES}
        COMMENT "Generating shader header ${OUTPUT_HPP}"
        COMMAND ${CMAKE_COMMAND} -E echo "//Auto-generated by cmake" > ${OUTPUT_HPP}
        COMMAND ${CMAKE_COMMAND} -E echo "\\#pragma once" >> ${OUTPUT_HPP}
        COMMAND ${CMAKE_COMMAND} -E echo "namespace f2m::shaders {" >> ${OUTPUT_HPP}
        COMMAND ${CMAKE_COMMAND} -E echo "struct ${SHADER_NAME} {" >> ${OUTPUT_HPP}
        COMMAND 
            ${CMAKE_COMMAND}
            -S ${PROJECT_SOURCE_DIR} -B ${PROJECT_BINARY_DIR}
            -DINPUT_SPVS="${COMPILED_SHADER_INPUTS}" -DOUTPUT_HPP="${OUTPUT_HPP}"
            -P ${PROJECT_SOURCE_DIR}/shaders/compile.cmake
        COMMAND ${CMAKE_COMMAND} -E echo "}\;" >> ${OUTPUT_HPP}
        COMMAND ${CMAKE_COMMAND} -E echo "}" >> ${OUTPUT_HPP}
    )
endforeach()